# learn-new-tools

./: .gitignore  README.md
bash/: .gitignore  changejpeg2JPEG.sh  get_session_name.sh  hello.py  u.sh  w.sh  x.sh
c++/: note.md
c++/boost/python/class/: CMakeLists.txt  classes.cpp
c++/boost/python/hello-world/: CMakeLists.txt  hello.cpp
c++/protobuf/: CMakeLists.txt  learn_proto.cpp
c++/protobuf/cmake/: ProtoBuf.cmake
caffe/: note.md
cmake/: note.md
cmake/options/: CMakeLists.txt
cmake/options/include/: config.h  config.h.cmake
cmake/tutorial/: CMakeLists.txt  TutorialConfig.h.cmake  tutorial.cxx
cmake/tutorial/MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cxx  mysqrt.h
cmake/tutorial/options/: CMakeCache.txt  CMakeLists.txt  Demo  Makefile  README.md  cmake_install.cmake  main.cc
cmake/tutorial/options/math/: MathFunctions.cc  MathFunctions.h
cmake/tutorial/sub_dir/: CMakeLists.txt  README.md  main.cc
cuda/: note.md
cuda/cublas/: cholesky.cu  display  display.cu  matrix_vec_mul  matrix_vec_mul.cu
cuda/tutorial/: atomic_inc.cu  cube.cu  printid.cu  square.cu
gdb/: array  array.c  minimal  minimal.c
gfw/: OmegaOptions.bak  README.md  fanqiang  naive
gfw/backup/goagent-backup/: README.md
gfw/backup/goagent-backup/local/: proxy.ini
gfw/backup/shadowsocks-windows-backup/: gui-config.json
gym/: tutorial.py
html/: learn.html
ipython-notebook/: README.md  custom.css  learnipynb.ipynb
javascript/: a.js  array-filtering.js  for-loop.js  function-arguments.js  functions.js  if-statements.js  looping-through-arrays.js  number-to-string.js  numbers.js  object-properties.js  scope.js  variables.js
keras/: .gitignore  mnist_cnn.py
lasagne/: mnist.py
matlab/: .gitignore  README.md
matlab/mex/: addArray.c  arrayProduct.c
matlab/vectorization/: README.md  test_sum.m
nodejs/: demofile1.html  myfirst.js  myfirstmodule.js  package-lock.json  summer.html  winter.html
nodejs/learnyounode/: .swp  a.js  mymodule.js  note.md  program.js
opencv/: CMakeLists.txt  main.cpp  note.md
opencv/python/: test-opencv-video.py
pandas/: README.md
pdb/: test_pdb.py
phantomjs/tutorial/: evaluate_js_code.js  hello.js  load_page.js  load_speed.js  showcookies.js
python/log/: learnlog.py  note.md
python/matplotlib/: test.py
python/multiprocess/: a.py  identity.py
python3.4/: :wq  note.md
pytorch/: .gitignore  main.py
ruby/: learn.rb
scrapy/tutorial/tutorial/: marilyn-monroe.html  quotes.json
scrapy/tutorial/tutorial/spiders/: quotes_spider.py
sh/: changejpeg2JPEG.sh  data.txt  learn.sh  monitor  note.md  note.sh
tensorflow/: mnist_expert.py
tex/: .gitignore  test.tex
theano/: .gitignore  README.md  baby_steps.py  imdb.py  logistic_regression.py  more_examples.py  test.py
vimrc/.vim_runtime/: README.md  my_configs.vim
vimrc/.vim_runtime/sources_non_forked/tlib/doc/: tags
